fixed acidently removed overflow-y for hometabs

--- a/src/style/hometabs.scss
+++ b/src/style/hometabs.scss
@@ -12,6 +12,7 @@
             bottom: 0;
             left: 0;
             right: 0;
+            overflow-y: auto;
 
             &__appBar {
                 background-color: rgba(0,0,0,.4);
